--- a/_posts/2012-04-12_git-tfs_fr.textile
+++ b/_posts/2012-04-12_git-tfs_fr.textile
@@ -5,9 +5,11 @@ description: "Utilisation de git avec un serveur tfs"
 categories: .Net
 tags:
 - Jenkins
-- Integration Conitnue
-published: false
+- Integration Continue
+published: true
 ---
+
+Utilisation de Git en environnement hostile (... avec un serveur TFS)
 
 h1. Cloner la branche principale du dépôt tfs
 
@@ -43,24 +45,23 @@ url = http://myTfsServer:8080/tfs/DepotTfs
 repository = $/MonProjet/NomDeLaBranche
 fetch = refs/remotes/default/maBrancheTfs
 
-	2. Trouver le numéro de commit tfs 
-    Find the tfs commit number of the first branch commit (found in the properties of the branch in tfs or with the command line "tf branches $/MonProjet/NomDeLaBranche"). Then, with that number, the sha1 of the previous commit (the last common commit from the trunc and the branch) in git.
+	2. Trouvez le numéro de premier commit tfs de la branche
+    Ce numéro est disponible, soit dans les propriétés de la branche depuis le "Team Explorer" soit en utilisant la ligne de commande :
+	"tf branches $/MonProjet/NomDeLaBranche"
+	
+	3. Trouvez le sha1 du commit parent à celui trouvé précédement.
+	Dans l'historique de git, chercher le sha1, non pas du commit trouvé à l'étape suivante mais de son parent (n° du commit précédent -1). C'est à dire le dernier commit commun au tronc et à la branche!
+	
+    4. Extraire ce commit en créant une branche locale par la commande :
+	git checkout -b maBrancheTfs [SHA1_TROUVE_PRECEDEMENT]
+	"maBrancheTfs" est le nom de la branche git locale correspondant à la branche sur tfs
+	
+    5. Créer manuellement la référence sur la branche locale (autrement notre future branche ne sera pas connectée au tonc :( )
+    "maBrancheTfs" est le nom de la branche distante tfs définie à l'étape 1.
+    git rev-parse maBrancheTfs >> ./.git/refs/remotes/tfs/maBrancheTfs
 
-    Checkout this revision and create a local branch to this commit ( "TFS_LOCAL_BRANCH" is the name of the local branch mirror of the tfs remote branch) :
-    git checkout -b TFS_LOCAL_BRANCH [SHA1_PREVIOUSLY_FOUND]
-
-    Manualy create the remote branch file :( otherwise my futur branch won't be connected to the trunc in the git repository :(
-    "tfsBranch" is the name of the remote tfs branch defined in step 1.
-    git rev-parse TFS_LOCAL_BRANCH >> ./.git/refs/remotes/tfs/tfsBranch
-
-    Fetch commit history of the tfs branch!!! Command to do each time you want to synchronize with the tfs server, in fact....
-    git tfs fetch -i tfsBranch
-
-git checkout [SHA_COMMIT_SOUHAITE] #(trouvé dans les propriétés de la branche --ou "tf branches $/MyTfsProject/TheTfsBranch"-- -1 pour avoir le précédent commit commun)
-git checkout -b maBrancheTfs
-Creation du ref manuel ( sinon les 2 branches sont déconnectées!)
-git rev-parse maBrancheTfs >> ./.git/refs/remotes/tfs/maBrancheTfs
-git tfs fetch -i maBrancheTfs
+    6. Récupérer l'historique des commits de la branche tfs!!! Commande à effectuer chaque fois qu'on voudra resynchroniser la branche avec le serveur...
+    git tfs fetch -i maBrancheTfs
 
 h2. Récupération des commits de la branche
 git tfs fetch -i maBrancheTfs
@@ -68,7 +69,8 @@ git tfs fetch -i maBrancheTfs
 h2. Commiter sur la branche
 git tfs ct -i maBrancheTfs
 
-Faire "Propriétés..." sur la branche pour connaitre le n° du 1er commit pour le faire au bon endroit....
+<!--
+Annexe :
 http://www.drrandom.org/post/2011/11/16/Grappling-with-multiple-remotes-in-git-tfs.aspx
 http://stackoverflow.com/questions/8559814/merge-two-tfs-branches-with-git-tfs
 modifier le fichier de config pour ajouter nouveau tfs-remote 
@@ -95,6 +97,6 @@ La liste de fichier ignorés :
 
 git ls-files -v | grep ^[a-z]
 http://gitready.com/intermediate/2009/02/18/temporarily-ignoring-files.html
-
+-->
 
 
